# vsix-checker

./: .gitignore  README.md  pyproject.toml
meta/: angular.ng-template.yml  dbaeumer.vscode-eslint.yml  eamodio.gitlens.yml  editorconfig.editorconfig.yml  esbenp.prettier-vscode.yml  stylelint.vscode-stylelint.yml
src/vsix_check_pipeline/: __init__.py  cli.py  coverage.py  diff.py  git.py  marketplace.py  meta.py  pipeline.py
tests/: test_cli.py  test_coverage.py  test_diff.py  test_git.py  test_marketplace.py  test_meta.py  test_pipeline.py
